--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon server.js"
+    "server": "nodemon server.js --ignore 'client/'",
+    "client": "npm run dev --prefix client",
+    "start": "node server.js",
+    "dev": "concurrently 'npm run server' 'npm run client'",
+    "build": "npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "R. Felisi",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
