Deploy one more time

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "node": "16.14.2",
+  "engines": {
+      "node": "16.14.2"
+    },
   "scripts": {
     "server": "nodemon server.js --ignore 'client/'",
     "client": "npm run dev --prefix client",
