--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "engines": {
-      "node": "16.14.2"
+      "node": "16.x"
     },
   "scripts": {
     "server": "nodemon server.js --ignore 'client/'",
